<resources>
    <string name="app_name">Team3AndroidCA</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="isbn">ISBN</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="stock">Stock</string>
    <string name="cover">Book Cover</string>
    <string name="update">Update</string>
    <string name="bookId">Book ID</string>
    <string name="search">Search book titles</string>

</resources>
